--- a/style.css
+++ b/style.css
@@ -72,3 +72,9 @@ form {
     font-size: 3rem;
     padding-top: 300px;
 }
+
+.play-again-btn {
+    width: 200px;
+    height: 50px;
+    margin-top: 20px;
+}
