--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ form {
     height: 100px;
     display: block;
     border: 2px solid black;
+    font-size: 80px;
+    text-align: center;
 }
 
 .cell:hover {
